--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,11 @@ html {
   font-size: 10px;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .page-container {
   position: relative;
   min-height: 100vh;
